--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "date-fns": "^1.28.5",
+    "exif-js": "^2.3.0",
+    "lodash": "^4.17.4",
+    "mapbox-gl": "^0.40.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.4.0",
+    "vuex-router-sync": "^4.3.1",
+    "worker-loader": "^0.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
