--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "4.3.0",
+    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-config-standard": "^6.2.1",
     "eslint-config-vue": "^2.0.2",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-flowtype-errors": "^3.3.1",
     "eslint-plugin-html": "^3.2.2",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eslint-plugin-vue": "^3.13.0",
