--- a/package.json
+++ b/package.json
@@ -8,7 +8,21 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "src/components/(.*)$":"<rootDir>/src/components/$1.vue",
+      "^vue$":"vue/dist/vue.common.js",
+      "@/(.*)$":"<rootDir>/src/$1",
+      "src":"<rootDir>/src",
+      "assets":"<rootDir>/src/assets"
+    },
+    "transform": {
+      ".*":"<rootDir>/node_modules/webpack-babel-jest"
+    },
+    "moduleFileExtensions": ["js", "json", "es6"]  
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -28,6 +42,7 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -46,10 +61,10 @@
     "eslint-config-standard": "^6.2.1",
     "eslint-config-vue": "^2.0.2",
     "eslint-friendly-formatter": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-flowtype-errors": "^3.3.1",
     "eslint-plugin-html": "^3.2.2",
-    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
@@ -62,6 +77,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "jest": "^21.1.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
