--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "babel-polyfill": "^6.26.0",
     "date-fns": "^1.28.5",
     "dexie": "^2.0.0",
-    "exif-js": "^2.3.0",
+    "exif-js": "git://github.com/JohanCodinha/exif-js",
     "lodash": "^4.17.4",
     "mapbox-gl": "^0.40.0",
     "node-sass": "^4.5.3",
