--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.4",
     "mapbox-gl": "^0.40.0",
     "node-sass": "^4.5.3",
+    "oboe": "^2.1.4",
     "sass-loader": "^6.0.6",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
